changed commentary a bit

--- a/Assignment Code/Chart.ipynb
+++ b/Assignment Code/Chart.ipynb
@@ -77,22 +77,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "0f5e7e3e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "YF.download() has changed argument auto_adjust default to True\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_65709/1744831553.py:19: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "/tmp/ipykernel_65709/4026951730.py:20: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
       "  Price_Targets = pd.read_csv(\n"
      ]
     },
@@ -108,6 +101,7 @@
     }
    ],
    "source": [
+    "#Import necessary Libraries\n",
     "import pandas as pd\n",
     "import yfinance as yf\n",
     "import matplotlib.pyplot as plt\n",
@@ -125,13 +119,14 @@
     "Initial_Ratio = Closing_Prices['VEA.AX'].iloc[0] / Closing_Prices['^AXJO'].iloc[0]\n",
     "Closing_Prices['Rebased_ASX200'] = Closing_Prices['^AXJO'] * Initial_Ratio\n",
     "\n",
-    "#Read and process historical price targets from CSV file\n",
+    "#Read historical price targets from CSV file and parse 'Date' column into datetime format\n",
     "Price_Targets = pd.read_csv(\n",
     "    \"VEApricetargets.csv\",\n",
     "     parse_dates =  ['Date'],\n",
     "     date_parser = lambda x: pd.to_datetime(x, format='%m/%d/%y')\n",
     ")\n",
     "\n",
+    "#Sort price targets by date and filter to match date range of closing prices\n",
     "Price_Targets = Price_Targets.sort_values('Date')\n",
     "Price_Targets = Price_Targets[\n",
     "    (Price_Targets['Date'] >= Closing_Prices.index[0]) &\n",
