Removed CCC ratio

--- a/Assignment Code/Financial_Ratios_Metrics.ipynb
+++ b/Assignment Code/Financial_Ratios_Metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "id": "c66189c9",
    "metadata": {},
    "outputs": [],
@@ -21,14 +21,13 @@
     "                                      calculate_leverage_ratio, calculate_asset_turnover_ratio, \n",
     "                                      calculate_fixed_asset_turnover_ratio, calculate_inventory_turnover_ratio, \n",
     "                                      calculate_receivables_turnover_ratio, calculate_payables_turnover_ratio, \n",
-    "                                      calculate_cash_conversion_cycle, calculate_current_ratio, \n",
-    "                                      calculate_quick_ratio, calculate_cash_ratio, calculate_gross_profit_margin, \n",
-    "                                      calculate_ebitda_margin, calculate_ebit_margin)"
+    "                                      calculate_current_ratio, calculate_quick_ratio, calculate_cash_ratio, \n",
+    "                                      calculate_gross_profit_margin, calculate_ebitda_margin, calculate_ebit_margin)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "id": "c73cbcd9",
    "metadata": {},
    "outputs": [
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +128,6 @@
       "Inventory Turnover: 13.00\n",
       "Receivables Turnover: 18.56\n",
       "Payables Turnover: 16.63\n",
-      "Cash Conversion Cycle: 25.78\n",
       "Current Ratio: 0.95\n",
       "Quick Ratio: 0.51\n",
       "Cash Ratio: 0.04\n",
@@ -160,7 +158,6 @@
     "    \"Inventory Turnover\": calculate_inventory_turnover_ratio(cost_of_goods_sold, average_inventory),\n",
     "    \"Receivables Turnover\": calculate_receivables_turnover_ratio(revenue, average_accounts_receivable),\n",
     "    \"Payables Turnover\": calculate_payables_turnover_ratio(cost_of_goods_sold, average_accounts_payable),\n",
-    "    \"Cash Conversion Cycle\": calculate_cash_conversion_cycle(inventory_days, receivables_days, payables_days),\n",
     "    \"Current Ratio\": calculate_current_ratio(current_assets, current_liabilities),\n",
     "    \"Quick Ratio\": calculate_quick_ratio(current_assets, current_liabilities, inventory),\n",
     "    \"Cash Ratio\": calculate_cash_ratio(cash_and_cash_equivalents, current_liabilities),\n",
@@ -177,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "id": "eef7ac8c",
    "metadata": {},
    "outputs": [
@@ -253,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "124d1e98",
    "metadata": {},
    "outputs": [
@@ -262,47 +259,25 @@
      "output_type": "stream",
      "text": [
       "Ratio Analysis - Viva Energy Group Ltd (ASX: VEA):\n",
-      "                                           FY21          FY22          FY23  \\\n",
-      "Interest Burden                    9.507198e-01  9.521207e-01  3.104907e-01   \n",
-      "Interest Coverage                  2.029213e+01  2.088587e+01  1.450307e+00   \n",
-      "Leverage                           3.460817e+00  3.652830e+00  4.517209e+00   \n",
-      "Total Asset Turnover               2.175430e+00  3.037768e+00  2.820365e+00   \n",
-      "Fixed Asset Turnover               4.294744e+00  7.019050e+00  6.315901e+00   \n",
-      "Inventory Turnover                 1.199440e+01  1.538263e+01  1.356524e+01   \n",
-      "Receivables Turnover               1.374006e+01  1.528027e+01  1.595081e+01   \n",
-      "Payables Turnover                  1.754172e+01  2.161932e+01  1.978127e+01   \n",
-      "Cash Conversion Cycle              1.530200e+09  2.164800e+09  2.170900e+09   \n",
-      "Current Ratio                      1.050181e+00  1.037450e+00  1.001116e+00   \n",
-      "Quick Ratio                        5.747682e-01  6.209923e-01  5.647510e-01   \n",
-      "Cash Ratio                         3.897622e-02  7.748733e-02  5.230075e-02   \n",
-      "Return on Assets (ROA)             3.186526e-02  5.963867e-02  4.183962e-04   \n",
-      "Return on Equity (ROE)             1.102798e-01  2.178499e-01  1.889983e-03   \n",
-      "Return on Invested Capital (ROIC)  1.010938e-01  2.178499e-01  1.458117e-03   \n",
-      "Gross Profit Margin                1.102264e-01  8.320195e-02  4.782670e-02   \n",
-      "EBITDA Margin                      4.754088e-02  4.476934e-02  2.195554e-02   \n",
-      "EBIT Margin                        2.271698e-02  2.933980e-02  4.614412e-03   \n",
-      "Net Profit Margin                  1.464780e-02  1.963239e-02  1.483483e-04   \n",
-      "\n",
-      "                                           FY24  \n",
-      "Interest Burden                   -1.977612e+00  \n",
-      "Interest Coverage                  3.358396e-01  \n",
-      "Leverage                           6.397225e+00  \n",
-      "Total Asset Turnover               2.473522e+00  \n",
-      "Fixed Asset Turnover               5.278273e+00  \n",
-      "Inventory Turnover                 1.300332e+01  \n",
-      "Receivables Turnover               1.856412e+01  \n",
-      "Payables Turnover                  1.662672e+01  \n",
-      "Cash Conversion Cycle              2.068800e+09  \n",
-      "Current Ratio                      9.493897e-01  \n",
-      "Quick Ratio                        5.064221e-01  \n",
-      "Cash Ratio                         4.104629e-02  \n",
-      "Return on Assets (ROA)            -6.292628e-03  \n",
-      "Return on Equity (ROE)            -4.025536e-02  \n",
-      "Return on Invested Capital (ROIC) -1.965684e-02  \n",
-      "Gross Profit Margin                9.837558e-02  \n",
-      "EBITDA Margin                      2.084875e-02  \n",
-      "EBIT Margin                        1.787131e-03  \n",
-      "Net Profit Margin                 -2.543995e-03  \n"
+      "                                        FY21       FY22       FY23       FY24\n",
+      "Interest Burden                     0.950720   0.952121   0.310491  -1.977612\n",
+      "Interest Coverage                  20.292135  20.885870   1.450307   0.335840\n",
+      "Leverage                            3.460817   3.652830   4.517209   6.397225\n",
+      "Total Asset Turnover                2.175430   3.037768   2.820365   2.473522\n",
+      "Fixed Asset Turnover                4.294744   7.019050   6.315901   5.278273\n",
+      "Inventory Turnover                 11.994404  15.382630  13.565239  13.003318\n",
+      "Receivables Turnover               13.740062  15.280273  15.950806  18.564125\n",
+      "Payables Turnover                  17.541723  21.619318  19.781265  16.626722\n",
+      "Current Ratio                       1.050181   1.037450   1.001116   0.949390\n",
+      "Quick Ratio                         0.574768   0.620992   0.564751   0.506422\n",
+      "Cash Ratio                          0.038976   0.077487   0.052301   0.041046\n",
+      "Return on Assets (ROA)              0.031865   0.059639   0.000418  -0.006293\n",
+      "Return on Equity (ROE)              0.110280   0.217850   0.001890  -0.040255\n",
+      "Return on Invested Capital (ROIC)   0.101094   0.217850   0.001458  -0.019657\n",
+      "Gross Profit Margin                 0.110226   0.083202   0.047827   0.098376\n",
+      "EBITDA Margin                       0.047541   0.044769   0.021956   0.020849\n",
+      "EBIT Margin                         0.022717   0.029340   0.004614   0.001787\n",
+      "Net Profit Margin                   0.014648   0.019632   0.000148  -0.002544\n"
      ]
     }
    ],
@@ -330,7 +305,6 @@
     "        \"Inventory Turnover\": calculate_inventory_turnover_ratio(stock_financials.loc[\"Cost Of Revenue\"].iloc[idx], stock_balance_sheet.loc[\"Inventory\"].iloc[idx]),\n",
     "        \"Receivables Turnover\": calculate_receivables_turnover_ratio(stock_financials.loc[\"Total Revenue\"].iloc[idx], stock_balance_sheet.loc[\"Accounts Receivable\"].iloc[idx]),\n",
     "        \"Payables Turnover\": calculate_payables_turnover_ratio(stock_financials.loc[\"Cost Of Revenue\"].iloc[idx], stock_balance_sheet.loc[\"Accounts Payable\"].iloc[idx]),\n",
-    "        \"Cash Conversion Cycle\": calculate_cash_conversion_cycle(stock_balance_sheet.loc[\"Inventory\"].iloc[idx], stock_balance_sheet.loc[\"Accounts Receivable\"].iloc[idx], stock_balance_sheet.loc[\"Accounts Payable\"].iloc[idx]),\n",
     "\n",
     "        # Liquidity Ratios\n",
     "        \"Current Ratio\": calculate_current_ratio(stock_balance_sheet.loc[\"Current Assets\"].iloc[idx], stock_balance_sheet.loc[\"Current Liabilities\"].iloc[idx]),\n",
