Finalised code to scrape image from webside and load into analyst report at appropriate location.

--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -70,22 +70,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "82294f4f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "FPDF error: Undefined font: times new roman B",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     10\u001b[39m my_pdf.add_page()\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# Set font\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m \u001b[43mmy_pdf\u001b[49m\u001b[43m.\u001b[49m\u001b[43mset_font\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mTimes New Roman\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mB\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m11\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# Set automatic page break\u001b[39;00m\n\u001b[32m     16\u001b[39m my_pdf.set_auto_page_break(auto=\u001b[38;5;28;01mTrue\u001b[39;00m, margin=\u001b[32m15\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:603\u001b[39m, in \u001b[36mFPDF.set_font\u001b[39m\u001b[34m(self, family, style, size)\u001b[39m\n\u001b[32m    601\u001b[39m         \u001b[38;5;28mself\u001b[39m.fonts[fontkey]={\u001b[33m'\u001b[39m\u001b[33mi\u001b[39m\u001b[33m'\u001b[39m:i,\u001b[33m'\u001b[39m\u001b[33mtype\u001b[39m\u001b[33m'\u001b[39m:\u001b[33m'\u001b[39m\u001b[33mcore\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mname\u001b[39m\u001b[33m'\u001b[39m:\u001b[38;5;28mself\u001b[39m.core_fonts[fontkey],\u001b[33m'\u001b[39m\u001b[33mup\u001b[39m\u001b[33m'\u001b[39m:-\u001b[32m100\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mut\u001b[39m\u001b[33m'\u001b[39m:\u001b[32m50\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mcw\u001b[39m\u001b[33m'\u001b[39m:fpdf_charwidths[fontkey]}\n\u001b[32m    602\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m603\u001b[39m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43merror\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mUndefined font: \u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m+\u001b[49m\u001b[43mfamily\u001b[49m\u001b[43m+\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m \u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m+\u001b[49m\u001b[43mstyle\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    604\u001b[39m \u001b[38;5;66;03m#Select it\u001b[39;00m\n\u001b[32m    605\u001b[39m \u001b[38;5;28mself\u001b[39m.font_family=family\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Hugh\\Documents\\GITHUB\\FM_equity_research\\.venv\\Lib\\site-packages\\fpdf\\fpdf.py:227\u001b[39m, in \u001b[36mFPDF.error\u001b[39m\u001b[34m(self, msg)\u001b[39m\n\u001b[32m    225\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34merror\u001b[39m(\u001b[38;5;28mself\u001b[39m, msg):\n\u001b[32m    226\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mFatal error\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m227\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m'\u001b[39m\u001b[33mFPDF error: \u001b[39m\u001b[33m'\u001b[39m+msg)\n",
-      "\u001b[31mRuntimeError\u001b[39m: FPDF error: Undefined font: times new roman B"
-     ]
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -117,9 +114,53 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e590116c",
+   "id": "d37fd9ef",
    "metadata": {},
-   "source": []
+   "source": [
+    "To provide context for the recent financial performance of the company in 1H25, an image was scrapped from the companies recent announcement of key regulatory ratios and indicators of loan book health. These statistics could not be inferred from the yFinance data and thus provided unique value to the report."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a0ad574",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image URL: https://www.bendigobank.com.au/contentassets/f4ca4760f8394c3582ce67b6a6334bbc/price-table.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "from urllib.parse import urljoin\n",
+    "\n",
+    "# Step 1: Define the URL\n",
+    "url = 'https://www.bendigobank.com.au/media/financial-results-for-the-half-year-ended-31-december-2024/'\n",
+    "\n",
+    "# Step 2: Fetch the webpage\n",
+    "response = requests.get(url)\n",
+    "response.raise_for_status()\n",
+    "\n",
+    "# Step 3: Parse the HTML\n",
+    "soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "\n",
+    "# Step 4: Find the image with the specific src\n",
+    "target_src = '/contentassets/f4ca4760f8394c3582ce67b6a6334bbc/price-table.png'\n",
+    "img_tag = soup.find('img', {'src': target_src})\n",
+    "\n",
+    "# Step 5: If found, build the full image URL and download\n",
+    "if img_tag:\n",
+    "    img_url = urljoin(url, img_tag['src'])  # Build absolute URL\n",
+    "    img_response = requests.get(img_url)\n",
+    "    img_response.raise_for_status()\n",
+    "    with open('financial_results.png', 'wb') as f:\n",
+    "        f.write(img_response.content)\n"
+   ]
   }
  ],
  "metadata": {
