--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "82294f4f",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
        "''"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,9 +90,33 @@
     "    lines = file.read()\n",
     "\n",
     "from fpdf import FPDF\n",
+    "class PDF(FPDF):\n",
+    "    def header(self):\n",
+    "        # Add a logo (path, x-position, y-position, width)\n",
+    "        self.image('Logo.png', x=10, y=8, w=20)\n",
+    "\n",
+    "        # Set font for header text (optional)\n",
+    "        self.set_font('Arial', 'B', 12)\n",
+    "\n",
+    "        # Move to the right to make space for logo\n",
+    "        self.cell(50)\n",
+    "\n",
+    "        # Title (optional)\n",
+    "        self.cell(0, 10, 'My PDF Title', ln=True, align='C')\n",
+    "\n",
+    "        # Line break\n",
+    "        self.ln(20)\n",
+    "\n",
+    "    def footer(self):\n",
+    "        # Go to 15 mm from bottom\n",
+    "        self.set_y(-15)\n",
+    "        self.set_font('Arial', 'I', 8)\n",
+    "        self.cell(0, 10, f'Page {self.page_no()}', align='C')\n",
+    "\n",
+    "\n",
     "\n",
     "# Create a PDF object\n",
-    "my_pdf = FPDF(orientation='P', unit='mm', format='A4')\n",
+    "my_pdf = PDF(orientation='P', unit='mm', format='A4')\n",
     "\n",
     "# Add a page\n",
     "my_pdf.add_page()\n",
