--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -185,11 +185,53 @@
     "    with open('financial_results.png', 'wb') as f:\n",
     "        f.write(img_response.content)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6e2a7ed0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Banks campaign for cash levy to avoid Armaguard ‘monopoly’\n",
+      "Slash stamp duty to encourage retirees to downsize: ING\n",
+      "Bank profit falls send uneasy investors into panic mode\n",
+      "The ASX queries Bendigo Bank’s disclosures after share price tumble\n",
+      "What we learnt: Investors just handed out the biggest beating of profit season\n",
+      "Surge in Bendigo Bank lending crunches margins, sends shares sliding\n",
+      "Westpac boss supports RBA rate cut, says it will deliver needed relief\n",
+      "Banks would face new loan regime under Coalition amid ESG pushback\n",
+      "Credit to Chalmers for non-partisan RBA picks\n",
+      "Macquarie, Westpac and CBA big losers from $350m rural bank levy\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "# Reading in AFR URL for Bendigo Website\n",
+    "AFR = 'https://www.afr.com/company/asx/ben'\n",
+    "RawHTML = requests.get(AFR)\n",
+    "\n",
+    "# Parse the raw HTML using BeautifulSoup\n",
+    "parse = BeautifulSoup(RawHTML.content, 'html.parser')\n",
+    "\n",
+    "# Find recent AFR headlines by filtering to publication-specific format\n",
+    "headlines = parse.find_all('h3', class_='-_73414cb90844eda9-headline')\n",
+    "\n",
+    "# Pull and print the most recent 10 headlines\n",
+    "for headline in headlines[:10]:\n",
+    "    print(headline.get_text(strip=True))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -203,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
