--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "82294f4f",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "''"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,16 +109,18 @@
     "class PDF(FPDF):\n",
     "    def header(self):\n",
     "        # Add a logo (path, x-position, y-position, width)\n",
-    "        self.image('Logo.png', x=10, y=8, w=20)\n",
-    "\n",
+    "        \n",
+    "        self.set_fill_color(0, 51, 102)  # a nice dark blue\n",
+    "        self.rect(0, 0, self.w, 25, 'F')  # Draw filled rectangle across top (full page width)\n",
     "        # Set font for header text (optional)\n",
+    "        self.image('test.png', x=10, y=2, w=20)\n",
     "        self.set_font('Arial', 'B', 12)\n",
     "\n",
     "        # Move to the right to make space for logo\n",
     "        self.cell(50)\n",
     "\n",
     "        # Title (optional)\n",
-    "        self.cell(0, 10, 'My PDF Title', ln=True, align='C')\n",
+    "        self.cell(0, 10, 'Equity Research Report ASX:BEN', ln=True, align='C')\n",
     "\n",
     "        # Line break\n",
     "        self.ln(20)\n",
