--- a/Assignment/analyst_report.ipynb
+++ b/Assignment/analyst_report.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "82294f4f",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "''"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,61 +105,90 @@
     "from fpdf import FPDF\n",
     "from html.parser import HTMLParser\n",
     "\n",
+    "# Right column content\n",
+    "PLACE_HOLDER = \"\"\"This is the placeholder text for the right-hand column. \n",
+    "It can include observations, notes, or commentary, and will sit alongside the main content.\"\"\"\n",
+    "\n",
     "class PDF(FPDF):\n",
     "    def header(self):\n",
     "        banner_width = self.w - self.l_margin - self.r_margin\n",
-    "        self.image('test.png', x=self.l_margin, y=5, w=banner_width, h=20)\n",
+    "        self.image('test.png', x=self.l_margin, y=0, w=banner_width, h=20)\n",
+    "        self.set_y(25)\n",
+    "\n",
     "    def footer(self):\n",
     "        self.set_y(-12)\n",
     "        self.set_font('Arial', 'I', 8)\n",
     "        self.cell(0, 8, f'Page {self.page_no()}', align='C')\n",
     "\n",
     "\n",
-    "class MyHTMLParser(HTMLParser):\n",
-    "    def __init__(self, pdf):\n",
+    "class ColumnHTMLParser(HTMLParser):\n",
+    "    def __init__(self, pdf, x, y, col_width, line_height=6):\n",
     "        super().__init__()\n",
     "        self.pdf = pdf\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        self.col_width = col_width\n",
+    "        self.line_height = line_height\n",
     "        self.current_tag = None\n",
+    "        self.pdf.set_xy(x, y)\n",
     "\n",
     "    def handle_starttag(self, tag, attrs):\n",
     "        self.current_tag = tag\n",
     "        if tag == 'h1':\n",
     "            self.pdf.set_font('Arial', 'B', 16)\n",
-    "            self.pdf.ln(2)\n",
+    "            self.pdf.set_xy(self.x, self.pdf.get_y())\n",
     "        elif tag == 'h2':\n",
     "            self.pdf.set_font('Arial', 'B', 13)\n",
-    "            self.pdf.ln(1)\n",
+    "            self.pdf.set_xy(self.x, self.pdf.get_y())\n",
     "        elif tag == 'p':\n",
     "            self.pdf.set_font('Arial', '', 11)\n",
+    "            self.pdf.set_xy(self.x, self.pdf.get_y())\n",
     "\n",
     "    def handle_endtag(self, tag):\n",
     "        if tag == 'p':\n",
-    "            self.pdf.ln(2)  # Smaller paragraph spacing\n",
+    "            self.pdf.ln(2)\n",
     "        self.current_tag = None\n",
     "\n",
     "    def handle_data(self, data):\n",
-    "        if self.current_tag:\n",
-    "            self.pdf.multi_cell(0, 6, data)  # Reduced line height\n",
-    "        else:\n",
-    "            self.pdf.multi_cell(0, 6, data)\n",
+    "        self.pdf.multi_cell(self.col_width, self.line_height, data)\n",
+    "        self.pdf.set_x(self.x)  # stay in column after line wraps\n",
     "\n",
     "\n",
-    "# Read the commentary text\n",
+    "# Load the commentary from file\n",
     "with open(\"commentary.txt\", \"r\", encoding=\"utf-8\") as f:\n",
-    "    content = f.read()\n",
+    "    html_content = f.read()\n",
     "\n",
-    "# Create and configure the PDF\n",
-    "my_pdf = PDF(orientation='P', unit='mm', format='A4')\n",
-    "my_pdf.set_auto_page_break(auto=True, margin=15)\n",
-    "my_pdf.add_page()\n",
-    "my_pdf.set_font('Arial', '', 11)\n",
+    "# Set up PDF\n",
+    "pdf = PDF()\n",
+    "pdf.set_auto_page_break(auto=True, margin=15)\n",
+    "pdf.add_page()\n",
     "\n",
-    "# Parse and render the HTML content\n",
-    "parser = MyHTMLParser(my_pdf)\n",
-    "parser.feed(content)\n",
+    "# Column dimensions\n",
+    "total_width = pdf.w - pdf.l_margin - pdf.r_margin\n",
+    "col1_w = total_width * 2 / 3\n",
+    "col2_w = total_width * 1 / 3\n",
+    "line_height = 6\n",
     "\n",
-    "# Output the final PDF\n",
-    "my_pdf.output('hello_world.pdf')\n"
+    "# Starting position after header\n",
+    "y_start = pdf.get_y()\n",
+    "\n",
+    "# --------- RIGHT COLUMN (PLACE_HOLDER text) ---------\n",
+    "pdf.set_xy(pdf.l_margin + col1_w + 5, y_start)\n",
+    "pdf.set_font('Arial', 'I', 10)\n",
+    "pdf.multi_cell(col2_w - 5, line_height, PLACE_HOLDER)\n",
+    "y_right_end = pdf.get_y()\n",
+    "\n",
+    "# --------- LEFT COLUMN (Formatted HTML) ---------\n",
+    "pdf.set_xy(pdf.l_margin, y_start)\n",
+    "html_parser = ColumnHTMLParser(pdf, x=pdf.l_margin, y=y_start, col_width=col1_w, line_height=line_height)\n",
+    "html_parser.feed(html_content)\n",
+    "y_left_end = pdf.get_y()\n",
+    "\n",
+    "# Ensure bottom spacing is correct\n",
+    "pdf.set_y(max(y_left_end, y_right_end) + 10)\n",
+    "\n",
+    "# Save it\n",
+    "pdf.output('BEN.pdf')\n"
    ]
   },
   {
@@ -257,7 +286,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -271,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
